<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.l2_fedeiko.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.l2_fedeiko.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.l2_fedeiko.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/new_some_nav"
        android:name="com.example.l2_fedeiko.ui.some.SomeFragment"
        android:label="@string/menu_some"
        tools:layout="@layout/fragment_some" />

    <activity
        android:id="@+id/new_some_t"
        android:name="com.example.l2_fedeiko.ui.t.SomeTabbedActivity"
        android:label="@string/menu_some_t"
        tools:layout="@layout/fragment_some_tabbed" />
</navigation>